syntax = "proto2";

option java_package = "robin.protobuf";
option java_outer_classname = "SlaveProto";

message SlaveRequest {
  required int64 version = 1;
}

message SlaveResponse {
  message RobinRequest {
    required int32 type = 1;
    required string key = 2;
    optional bytes content = 3;
  }
  required int64 version = 1;
  required int32 op = 2;
  repeated RobinRequest data = 3;
}